[package]
name = "bool-flags"
version = "0.1.1"
edition = "2024"
authors = ["CoffeeCatRailway"]
license = "MIT"
keywords = ["bit", "bool-flags", "flags", "bool"]
readme = "README.md"
repository = "https://github.com/CoffeeCatRailway/bool-flags"
homepage = "https://github.com/CoffeeCatRailway/bool-flags"
#categories = ["no-std"]
description = "Condense multiple booleans into fewer bytes."

[dependencies]
minipaste = "0.1.0"

[features]
default = []
inline = []
usize = []
